web/book/tests/snapshots/snapshot__tests__prql__syntax-10.prql.snap
---
source: book/tests/snapshot.rs
expression: "prql target:sql.mysql\nfrom employees\nselect `first name`\n"
---
SELECT
  `first name`
FROM
  employees

