web/book/tests/snapshots/snapshot__tests__prql__syntax-12.prql.snap
---
source: book/tests/snapshot.rs
expression: "from `dir/*.parquet`\n"
---
SELECT
  *
FROM
  "dir/*.parquet"

