web/book/tests/snapshots/snapshot__tests__prql__syntax-14.prql.snap
---
source: book/tests/snapshot.rs
expression: "from `music.albums`\n"
---
SELECT
  *
FROM
  music.albums

