web/book/tests/snapshots/snapshot__tests__prql__syntax-15.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nfilter id == $1\n"
---
SELECT
  *
FROM
  employees
WHERE
  id = $1

