web/book/tests/snapshots/snapshot__tests__prql__syntax-16.prql.snap
---
source: book/tests/snapshot.rs
expression: "from numbers\nselect [\n    small = 1.000_000_1,\n    big = 5_000_000,\n]\n"
---
SELECT
  1.0000001 AS small,
  5000000 AS big
FROM
  numbers

