web/book/tests/snapshots/snapshot__tests__prql__syntax-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nselect [first_name]\n"
---
SELECT
  first_name
FROM
  employees

