web/book/tests/snapshots/snapshot__tests__prql__syntax-9.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees  # Comment 1\n# Comment 2\naggregate [average salary]\n"
---
SELECT
  AVG(salary)
FROM
  employees

